// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid /> component test Properly shows <GifGrid /> 1`] = `
<Fragment>
  <h3>
    categoria1
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<GifGrid /> component test Should show items when the images are loaded with useFetchGifs hook 1`] = `
<Fragment>
  <h3>
    categoria1
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="ABC Title"
      url="https://google.com"
    />
  </div>
</Fragment>
`;
